review command for delete entities in order to manage property promise. review the model to define properly the lIst<String> type for datastream<->Thing and location<->Thing ref